Se agrego una barra para separar cards de carrousel y las cards ahora son de 4 columnas por fila

--- a/index.html
+++ b/index.html
@@ -93,139 +93,188 @@
         <span class="visually-hidden">Next</span>
       </button>
     </div>
-    <div class="row row-cols-1 row-cols-md-3 mt-5">
-      <div class="col">
-        <div id="cards_mas_pequennias">
-          <div class="card h-100">
-            <div id="img_cards">
-              <a href="vista_producto.html">
-                <img src="fotos/img_default_productos.jpg" class="card-img-top" alt="producto">
-              </a>
-            </div>
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            </div>
-            <div class="card-footer" style="text-align: center;">
-              <p style="font-weight: bold;">PRECIO: $212.990</p>
-              <hr>
-              <a href="carrito.html">
-                <button type="button" class="btn btn-dark" style="margin-bottom: 5px ;">AÑADIR AL CARRITO</button>
-              </a>
+    <div class="cuadrado-vista-producto h-100 w-100 mt-5" style="text-align: center;">
+      <h1>PARA TI:</h1>
+    </div>
+    <div class="container-fluid" style="width: 90%;">
+      <div class="row row-cols-1 row-cols-md-4 mt-5">
+        <div class="col">
+          <div id="cards_mas_pequennias">
+            <div class="card h-100">
+              <div id="img_cards">
+                <a href="vista_producto.html">
+                  <img src="fotos/img_default_productos.jpg" class="card-img-top" alt="producto">
+                </a>
+              </div>
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              </div>
+              <div class="card-footer" style="text-align: center;">
+                <p style="font-weight: bold;">PRECIO: $212.990</p>
+                <hr>
+                <a href="carrito.html">
+                  <button type="button" class="btn btn-dark" style="margin-bottom: 5px ;">AÑADIR AL CARRITO</button>
+                </a>
+              </div>
             </div>
           </div>
         </div>
+        <div class="col">
+          <div id="cards_mas_pequennias">
+            <div class="card h-100">
+              <div id="img_cards">
+                <a href="vista_producto.html">
+                  <img src="fotos/img_default_productos.jpg" class="card-img-top" alt="producto">
+                </a>
+              </div>
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              </div>
+              <div class="card-footer" style="text-align: center;">
+                <p style="font-weight: bold;">PRECIO: $212.990</p>
+                <hr>
+                <a href="carrito.html">
+                  <button type="button" class="btn btn-dark" style="margin-bottom: 5px ;">AÑADIR AL CARRITO</button>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div id="cards_mas_pequennias">
+            <div class="card h-100">
+              <div id="img_cards">
+                <a href="vista_producto.html">
+                  <img src="fotos/img_default_productos.jpg" class="card-img-top" alt="producto">
+                </a>
+              </div>
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              </div>
+              <div class="card-footer" style="text-align: center;">
+                <p style="font-weight: bold;">PRECIO: $212.990</p>
+                <hr>
+                <a href="carrito.html">
+                  <button type="button" class="btn btn-dark" style="margin-bottom: 5px ;">AÑADIR AL CARRITO</button>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div id="cards_mas_pequennias">
+            <div class="card h-100">
+              <div id="img_cards">
+                <a href="vista_producto.html">
+                  <img src="fotos/img_default_productos.jpg" class="card-img-top" alt="producto">
+                </a>
+              </div>
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              </div>
+              <div class="card-footer" style="text-align: center;">
+                <p style="font-weight: bold;">PRECIO: $212.990</p>
+                <hr>
+                <a href="carrito.html">
+                  <button type="button" class="btn btn-dark" style="margin-bottom: 5px ;">AÑADIR AL CARRITO</button>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div id="cards_mas_pequennias">
+            <div class="card h-100">
+              <div id="img_cards">
+                <a href="vista_producto.html">
+                  <img src="fotos/img_default_productos.jpg" class="card-img-top" alt="producto">
+                </a>
+              </div>
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              </div>
+              <div class="card-footer" style="text-align: center;">
+                <p style="font-weight: bold;">PRECIO: $212.990</p>
+                <hr>
+                <a href="carrito.html">
+                  <button type="button" class="btn btn-dark" style="margin-bottom: 5px ;">AÑADIR AL CARRITO</button>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div id="cards_mas_pequennias">
+            <div class="card h-100">
+              <div id="img_cards">
+                <a href="vista_producto.html">
+                  <img src="fotos/img_default_productos.jpg" class="card-img-top" alt="producto">
+                </a>
+              </div>
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              </div>
+              <div class="card-footer" style="text-align: center;">
+                <p style="font-weight: bold;">PRECIO: $212.990</p>
+                <hr>
+                <a href="carrito.html">
+                  <button type="button" class="btn btn-dark" style="margin-bottom: 5px ;">AÑADIR AL CARRITO</button>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>  
+        <div class="col">
+          <div id="cards_mas_pequennias">
+            <div class="card h-100">
+              <div id="img_cards">
+                <a href="vista_producto.html">
+                  <img src="fotos/img_default_productos.jpg" class="card-img-top" alt="producto">
+                </a>
+              </div>
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              </div>
+              <div class="card-footer" style="text-align: center;">
+                <p style="font-weight: bold;">PRECIO: $212.990</p>
+                <hr>
+                <a href="carrito.html">
+                  <button type="button" class="btn btn-dark" style="margin-bottom: 5px ;">AÑADIR AL CARRITO</button>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div> 
+        <div class="col">
+          <div id="cards_mas_pequennias">
+            <div class="card h-100">
+              <div id="img_cards">
+                <a href="vista_producto.html">
+                  <img src="fotos/img_default_productos.jpg" class="card-img-top" alt="producto">
+                </a>
+              </div>
+              <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              </div>
+              <div class="card-footer" style="text-align: center;">
+                <p style="font-weight: bold;">PRECIO: $212.990</p>
+                <hr>
+                <a href="carrito.html">
+                  <button type="button" class="btn btn-dark" style="margin-bottom: 5px ;">AÑADIR AL CARRITO</button>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div> 
       </div>
-      <div class="col">
-        <div id="cards_mas_pequennias">
-          <div class="card h-100">
-            <div id="img_cards">
-              <a href="vista_producto.html">
-                <img src="fotos/img_default_productos.jpg" class="card-img-top" alt="producto">
-              </a>
-            </div>
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            </div>
-            <div class="card-footer" style="text-align: center;">
-              <p style="font-weight: bold;">PRECIO: $212.990</p>
-              <hr>
-              <a href="carrito.html">
-                <button type="button" class="btn btn-dark" style="margin-bottom: 5px ;">AÑADIR AL CARRITO</button>
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div id="cards_mas_pequennias">
-          <div class="card h-100">
-            <div id="img_cards">
-              <a href="vista_producto.html">
-                <img src="fotos/img_default_productos.jpg" class="card-img-top" alt="producto">
-              </a>
-            </div>
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            </div>
-            <div class="card-footer" style="text-align: center;">
-              <p style="font-weight: bold;">PRECIO: $212.990</p>
-              <hr>
-              <a href="carrito.html">
-                <button type="button" class="btn btn-dark" style="margin-bottom: 5px ;">AÑADIR AL CARRITO</button>
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div id="cards_mas_pequennias">
-          <div class="card h-100">
-            <div id="img_cards">
-              <a href="vista_producto.html">
-                <img src="fotos/img_default_productos.jpg" class="card-img-top" alt="producto">
-              </a>
-            </div>
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            </div>
-            <div class="card-footer" style="text-align: center;">
-              <p style="font-weight: bold;">PRECIO: $212.990</p>
-              <hr>
-              <a href="carrito.html">
-                <button type="button" class="btn btn-dark" style="margin-bottom: 5px ;">AÑADIR AL CARRITO</button>
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div id="cards_mas_pequennias">
-          <div class="card h-100">
-            <div id="img_cards">
-              <a href="vista_producto.html">
-                <img src="fotos/img_default_productos.jpg" class="card-img-top" alt="producto">
-              </a>
-            </div>
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            </div>
-            <div class="card-footer" style="text-align: center;">
-              <p style="font-weight: bold;">PRECIO: $212.990</p>
-              <hr>
-              <a href="carrito.html">
-                <button type="button" class="btn btn-dark" style="margin-bottom: 5px ;">AÑADIR AL CARRITO</button>
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col">
-        <div id="cards_mas_pequennias">
-          <div class="card h-100">
-            <div id="img_cards">
-              <a href="vista_producto.html">
-                <img src="fotos/img_default_productos.jpg" class="card-img-top" alt="producto">
-              </a>
-            </div>
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            </div>
-            <div class="card-footer" style="text-align: center;">
-              <p style="font-weight: bold;">PRECIO: $212.990</p>
-              <hr>
-              <a href="carrito.html">
-                <button type="button" class="btn btn-dark" style="margin-bottom: 5px ;">AÑADIR AL CARRITO</button>
-              </a>
-            </div>
-          </div>
-        </div>
-      </div>  
     </div>
   </div>
 </body>
