--- a/perfil_usuario.html
+++ b/perfil_usuario.html
@@ -106,7 +106,9 @@
                                     <input type="password" class="form-control" id="password1">
                                 </div>
                                 <div class="text-end">
-                                    <button type="button" class="btn btn-primary">Cerrar sesion</button>
+                                    <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#guardar">
+                                        Guardar informacion
+                                    </button>
                                 </div>
                             </form>
                         </div>
@@ -114,6 +116,24 @@
                 </div>
             </div>
         </div>
+        <div class="modal fade" id="guardar" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h1 class="modal-title fs-5" id="exampleModalLabel">Quiere guardar la informacion?</h1>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                  Los cambios podran ser modificados en caso de ser necesario
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                  <button type="button" class="btn btn-primary">Save changes</button>
+                </div>
+              </div>
+            </div>
+          </div>
+
         <div class="row">
             <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
                     <div class="card">
