--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <a class="nav-link active" aria-current="page" href="productos.html">Productos</a>
               </li>
           </ul>
-          <form class="d-flex" role="search" style="margin-right: 40%;">
+          <form class="d-flex" role="search" style="margin-right: 30%;">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-success" type="submit">Search</button>
           </form>
@@ -78,10 +78,10 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="fotos/img_carrousel.jpg" class="d-block w-100" alt="pc" height="570px">
+          <img min-height="20%" src="fotos/img_carrousel.png" class="d-block w-100 h-100" alt="pc" >
         </div>
         <div class="carousel-item">
-          <img src="fotos/img_carrousel-2.jpg" class="d-block w-100" alt="..." height="570px">
+          <img min-height="20%"src="fotos/img_carrousel-2.png" class="d-block w-100 h-100" alt="..." >
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
@@ -93,11 +93,11 @@
         <span class="visually-hidden">Next</span>
       </button>
     </div>
-    <div class="cuadrado-vista-producto h-100 w-100 mt-5" style="text-align: center;">
+    <div class="cuadrado-vista-producto h-100 w-100 mt-3" style="text-align: center;">
       <h1>PARA TI:</h1>
     </div>
-    <div class="container-fluid" style="width: 90%;">
-      <div class="row row-cols-1 row-cols-md-4 mt-5">
+    <div id="productosIndex" class="container-fluid" style="width: 90%;">
+      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-md-4 g-3">
         <div class="col">
           <div id="cards_mas_pequennias">
             <div class="card h-100">
