--- a/productos.html
+++ b/productos.html
@@ -1,21 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">    
-    <title>Productos</title>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <link rel="stylesheet" href="style.css">
+<html lang="en"><head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">    
+  <title>Productos</title>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <div>
-    <div class="Navbar">
-      <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
+<div>
+  <div class="Navbar">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#"><img src="" alt="">PCFACTORY 2.0</a>
+        <a class="navbar-brand" href="index.html"><img src="fotos/logo.webp" style="width: 60px; height: 50px;"">DUOTECK</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -63,185 +61,200 @@
             <button class="btn btn-outline-success" type="submit">Search</button>
           </form>
           <a href="perfil_usuario.html" style="margin-left: 20px;">
-              <img src="usuario.png" alt="usuario">
+              <img src="fotos/usuario.png" alt="usuario">
           </a>
           <a href="carrito.html" style="margin-left: 20px;">
-              <img src="carrito.png" alt="carrito" >
+              <img src="fotos/carrito.png" alt="carrito" >
           </a>
         </div>
       </div>
-      </nav>
-    </div>
-
+    </nav>
   </div>
 
-  <div class="Titulo_prod"><h1 style="text-align: center;" >PRODUCTOS</h1></div>
+</div>
 
-  <div class="container">
-    <div class="row">
-      <div class="col-3">
-        <div class="card_prod">
-          <a href="vista_producto.html">
-            <img src="https://scglobal.cl/1636-medium_default/notebook-hp-14-cf2067la-i3-10110u-8gb-ssd-256gb-14-pulg-windows-10-home.jpg" class="card-img-top" alt="producto">
-          </a>          <div class="card-body">
-            <h5 class="card-title">COMPUTADOR HP</h5>
-            <p class="card-text">HP Intel dy5000la i5-1235U 16GB 512GB SSD Windows 11 Pro Natural Silver 15.6 FHD</p>
-          </div>
-          <br>
-          <hr>
-          <p class="parrafo"><b>PRECIO: $579.990</b></p>
-          <hr>
-          <div class="card-footer" style="text-align: center;">
-            <a href="carrito.html">
-              <button type="button" class="btn btn-dark">AÑADIR AL CARRITO</button>
+<div class="Titulo_prod"><h1 style="text-align: center;">PRODUCTOS</h1></div>
+
+<div id="productosIndex"class="container">
+  <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-md-4 g-3">
+    <div class="col">
+      <div id="cards_mas_pequennias">
+        <div class="card h-100">
+          <div id="img_cards">
+            <a href="vista_producto.html">
+              <img src="fotos/img_default_productos.jpg" class="card-img-top" alt="producto">
             </a>
           </div>
-        </div>
-      </div>
-
-      <div class="col-3">
-        <div class="card_prod">
-          <a href="vista_producto.html">
-            <img src="https://scglobal.cl/1636-medium_default/notebook-hp-14-cf2067la-i3-10110u-8gb-ssd-256gb-14-pulg-windows-10-home.jpg" class="card-img-top" alt="producto">
-          </a>          <div class="card-body">
-            <h5 class="card-title">COMPUTADOR HP</h5>
-            <p class="card-text">HP Intel dy5000la i5-1235U 16GB 512GB SSD Windows 11 Pro Natural Silver 15.6 FHD</p>
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
           </div>
-          <br>
-          <hr>
-          <p class="parrafo"><b>PRECIO: $579.990</b></p>
-          <hr>
           <div class="card-footer" style="text-align: center;">
+            <p style="font-weight: bold;">PRECIO: $212.990</p>
+            <hr>
             <a href="carrito.html">
-              <button type="button" class="btn btn-dark">AÑADIR AL CARRITO</button>
-            </a>
-          </div>
-        </div>
-      </div>
-
-
-      <div class="col-3">
-        <div class="card_prod">
-          <a href="vista_producto.html">
-            <img src="https://scglobal.cl/1636-medium_default/notebook-hp-14-cf2067la-i3-10110u-8gb-ssd-256gb-14-pulg-windows-10-home.jpg" class="card-img-top" alt="producto">
-          </a>          <div class="card-body">
-            <h5 class="card-title">COMPUTADOR HP</h5>
-            <p class="card-text">HP Intel dy5000la i5-1235U 16GB 512GB SSD Windows 11 Pro Natural Silver 15.6 FHD</p>
-          </div>
-          <br>
-          <hr>
-          <p class="parrafo"><b>PRECIO: $579.990</b></p>
-          <hr>
-          <div class="card-footer" style="text-align: center;">
-            <a href="carrito.html">
-              <button type="button" class="btn btn-dark">AÑADIR AL CARRITO</button>
-            </a>
-          </div>
-        </div>
-      </div>
-
-
-      <div class="col-3">
-        <div class="card_prod">
-          <a href="vista_producto.html">
-            <img src="https://scglobal.cl/1636-medium_default/notebook-hp-14-cf2067la-i3-10110u-8gb-ssd-256gb-14-pulg-windows-10-home.jpg" class="card-img-top" alt="producto">
-          </a>          <div class="card-body">
-            <h5 class="card-title">COMPUTADOR HP</h5>
-            <p class="card-text">HP Intel dy5000la i5-1235U 16GB 512GB SSD Windows 11 Pro Natural Silver 15.6 FHD</p>
-          </div>
-          <br>
-          <hr>
-          <p class="parrafo"><b>PRECIO: $579.990</b></p>
-          <hr>
-          <div class="card-footer" style="text-align: center;">
-            <a href="carrito.html">
-              <button type="button" class="btn btn-dark">AÑADIR AL CARRITO</button>
-            </a>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-3">
-        <div class="card_prod">
-          <a href="vista_producto.html">
-            <img src="https://scglobal.cl/1636-medium_default/notebook-hp-14-cf2067la-i3-10110u-8gb-ssd-256gb-14-pulg-windows-10-home.jpg" class="card-img-top" alt="producto">
-          </a>          <div class="card-body">
-            <h5 class="card-title">COMPUTADOR HP</h5>
-            <p class="card-text">HP Intel dy5000la i5-1235U 16GB 512GB SSD Windows 11 Pro Natural Silver 15.6 FHD</p>
-          </div>
-          <br>
-          <hr>
-          <p class="parrafo"><b>PRECIO: $579.990</b></p>
-          <hr>
-          <div class="card-footer" style="text-align: center;">
-            <a href="carrito.html">
-              <button type="button" class="btn btn-dark">AÑADIR AL CARRITO</button>
-            </a>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-3">
-        <div class="card_prod">
-          <a href="vista_producto.html">
-            <img src="https://scglobal.cl/1636-medium_default/notebook-hp-14-cf2067la-i3-10110u-8gb-ssd-256gb-14-pulg-windows-10-home.jpg" class="card-img-top" alt="producto">
-          </a>          <div class="card-body">
-            <h5 class="card-title">COMPUTADOR HP</h5>
-            <p class="card-text">HP Intel dy5000la i5-1235U 16GB 512GB SSD Windows 11 Pro Natural Silver 15.6 FHD</p>
-          </div>
-          <br>
-          <hr>
-          <p class="parrafo"><b>PRECIO: $579.990</b></p>
-          <hr>
-          <div class="card-footer" style="text-align: center;">
-            <a href="carrito.html">
-              <button type="button" class="btn btn-dark">AÑADIR AL CARRITO</button>
-            </a>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-3">
-        <div class="card_prod">
-          <a href="vista_producto.html">
-            <img src="https://scglobal.cl/1636-medium_default/notebook-hp-14-cf2067la-i3-10110u-8gb-ssd-256gb-14-pulg-windows-10-home.jpg" class="card-img-top" alt="producto">
-          </a>          <div class="card-body">
-            <h5 class="card-title">COMPUTADOR HP</h5>
-            <p class="card-text">HP Intel dy5000la i5-1235U 16GB 512GB SSD Windows 11 Pro Natural Silver 15.6 FHD</p>
-          </div>
-          <br>
-          <hr>
-          <p class="parrafo"><b>PRECIO: $579.990</b></p>
-          <hr>
-          <div class="card-footer" style="text-align: center;">
-            <a href="carrito.html">
-              <button type="button" class="btn btn-dark">AÑADIR AL CARRITO</button>
-            </a>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-3">
-        <div class="card_prod">
-          <a href="vista_producto.html">
-            <img src="https://scglobal.cl/1636-medium_default/notebook-hp-14-cf2067la-i3-10110u-8gb-ssd-256gb-14-pulg-windows-10-home.jpg" class="card-img-top" alt="producto">
-          </a>          <div class="card-body">
-            <h5 class="card-title">COMPUTADOR HP</h5>
-            <p class="card-text">HP Intel dy5000la i5-1235U 16GB 512GB SSD Windows 11 Pro Natural Silver 15.6 FHD</p>
-          </div>
-          <br>
-          <hr>
-          <p class="parrafo"><b>PRECIO: $579.990</b></p>
-          <hr>
-          <div class="card-footer" style="text-align: center;">
-            <a href="carrito.html">
-              <button type="button" class="btn btn-dark">AÑADIR AL CARRITO</button>
+              <button type="button" class="btn btn-dark" style="margin-bottom: 5px ;">AÑADIR AL CARRITO</button>
             </a>
           </div>
         </div>
       </div>
     </div>
+    <div class="col">
+      <div id="cards_mas_pequennias">
+        <div class="card h-100">
+          <div id="img_cards">
+            <a href="vista_producto.html">
+              <img src="fotos/img_default_productos.jpg" class="card-img-top" alt="producto">
+            </a>
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          </div>
+          <div class="card-footer" style="text-align: center;">
+            <p style="font-weight: bold;">PRECIO: $212.990</p>
+            <hr>
+            <a href="carrito.html">
+              <button type="button" class="btn btn-dark" style="margin-bottom: 5px ;">AÑADIR AL CARRITO</button>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div id="cards_mas_pequennias">
+        <div class="card h-100">
+          <div id="img_cards">
+            <a href="vista_producto.html">
+              <img src="fotos/img_default_productos.jpg" class="card-img-top" alt="producto">
+            </a>
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          </div>
+          <div class="card-footer" style="text-align: center;">
+            <p style="font-weight: bold;">PRECIO: $212.990</p>
+            <hr>
+            <a href="carrito.html">
+              <button type="button" class="btn btn-dark" style="margin-bottom: 5px ;">AÑADIR AL CARRITO</button>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div id="cards_mas_pequennias">
+        <div class="card h-100">
+          <div id="img_cards">
+            <a href="vista_producto.html">
+              <img src="fotos/img_default_productos.jpg" class="card-img-top" alt="producto">
+            </a>
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          </div>
+          <div class="card-footer" style="text-align: center;">
+            <p style="font-weight: bold;">PRECIO: $212.990</p>
+            <hr>
+            <a href="carrito.html">
+              <button type="button" class="btn btn-dark" style="margin-bottom: 5px ;">AÑADIR AL CARRITO</button>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div id="cards_mas_pequennias">
+        <div class="card h-100">
+          <div id="img_cards">
+            <a href="vista_producto.html">
+              <img src="fotos/img_default_productos.jpg" class="card-img-top" alt="producto">
+            </a>
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          </div>
+          <div class="card-footer" style="text-align: center;">
+            <p style="font-weight: bold;">PRECIO: $212.990</p>
+            <hr>
+            <a href="carrito.html">
+              <button type="button" class="btn btn-dark" style="margin-bottom: 5px ;">AÑADIR AL CARRITO</button>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div id="cards_mas_pequennias">
+        <div class="card h-100">
+          <div id="img_cards">
+            <a href="vista_producto.html">
+              <img src="fotos/img_default_productos.jpg" class="card-img-top" alt="producto">
+            </a>
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          </div>
+          <div class="card-footer" style="text-align: center;">
+            <p style="font-weight: bold;">PRECIO: $212.990</p>
+            <hr>
+            <a href="carrito.html">
+              <button type="button" class="btn btn-dark" style="margin-bottom: 5px ;">AÑADIR AL CARRITO</button>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>  
+    <div class="col">
+      <div id="cards_mas_pequennias">
+        <div class="card h-100">
+          <div id="img_cards">
+            <a href="vista_producto.html">
+              <img src="fotos/img_default_productos.jpg" class="card-img-top" alt="producto">
+            </a>
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          </div>
+          <div class="card-footer" style="text-align: center;">
+            <p style="font-weight: bold;">PRECIO: $212.990</p>
+            <hr>
+            <a href="carrito.html">
+              <button type="button" class="btn btn-dark" style="margin-bottom: 5px ;">AÑADIR AL CARRITO</button>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div> 
+    <div class="col">
+      <div id="cards_mas_pequennias">
+        <div class="card h-100">
+          <div id="img_cards">
+            <a href="vista_producto.html">
+              <img src="fotos/img_default_productos.jpg" class="card-img-top" alt="producto">
+            </a>
+          </div>
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          </div>
+          <div class="card-footer" style="text-align: center;">
+            <p style="font-weight: bold;">PRECIO: $212.990</p>
+            <hr>
+            <a href="carrito.html">
+              <button type="button" class="btn btn-dark" style="margin-bottom: 5px ;">AÑADIR AL CARRITO</button>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div> 
   </div>
-         
-</body>
-</html>
+</div>
+       
+
+</body></html>
