--- a/perfil_usuario.html
+++ b/perfil_usuario.html
@@ -1,164 +1,263 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="https://getbootstrap.com/docs/5.3/assets/css/docs.css"
+      rel="stylesheet"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <title>usuario</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <div class="Navbar">
-    <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="index.html"><img src="fotos/logo.webp" style="width: 60px; height: 50px;"">DUOTECK</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="Navbar">
+      <nav
+        class="navbar navbar-expand-lg bg-body-tertiary"
+        data-bs-theme="dark"
+      >
+        <div class="container-fluid">
+          <a class="navbar-brand" href="index.html"
+            ><img src="fotos/logo.webp" style="width: 60px; height:
+            50px;"">DUOTECK</a
+          >
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item dropdown">
-                  <a class="nav-link active dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Perifericos
-                  </a>
-                  <ul class="dropdown-menu">
+                <a
+                  class="nav-link active dropdown-toggle"
+                  href="#"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  Perifericos
+                </a>
+                <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="#">Action</a></li>
                   <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                  </ul>
+                  <li><hr class="dropdown-divider" /></li>
+                  <li>
+                    <a class="dropdown-item" href="#">Something else here</a>
+                  </li>
+                </ul>
               </li>
               <li class="nav-item dropdown">
-                  <a class="nav-link active dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Consolas
-                  </a>
-                  <ul class="dropdown-menu">
+                <a
+                  class="nav-link active dropdown-toggle"
+                  href="#"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  Consolas
+                </a>
+                <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="#">Action</a></li>
                   <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                  </ul>
+                  <li><hr class="dropdown-divider" /></li>
+                  <li>
+                    <a class="dropdown-item" href="#">Something else here</a>
+                  </li>
+                </ul>
               </li>
               <li class="nav-item dropdown">
-                  <a class="nav-link active dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Hardware
-                  </a>
-                  <ul class="dropdown-menu">
+                <a
+                  class="nav-link active dropdown-toggle"
+                  href="#"
+                  role="button"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                >
+                  Hardware
+                </a>
+                <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="#">Action</a></li>
                   <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                  </ul>
+                  <li><hr class="dropdown-divider" /></li>
+                  <li>
+                    <a class="dropdown-item" href="#">Something else here</a>
+                  </li>
+                </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="productos.html">Productos</a>
+                <a
+                  class="nav-link active"
+                  aria-current="page"
+                  href="productos.html"
+                  >Productos</a
+                >
               </li>
-          </ul>
-          <form class="d-flex" role="search" style="margin-right: 40%;">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
-          </form>
-          <a href="perfil_usuario.html" style="margin-left: 20px;">
-              <img src="fotos/usuario.png" alt="usuario">
-          </a>
-          <a href="carrito.html" style="margin-left: 20px;">
-              <img src="fotos/carrito.png" alt="carrito" >
-          </a>
+            </ul>
+            <form class="d-flex" role="search" style="margin-right: 40%">
+              <input
+                class="form-control me-2"
+                type="search"
+                placeholder="Search"
+                aria-label="Search"
+              />
+              <button class="btn btn-outline-success" type="submit">
+                Search
+              </button>
+            </form>
+            <a href="perfil_usuario.html" style="margin-left: 20px">
+              <img src="fotos/usuario.png" alt="usuario" />
+            </a>
+            <a href="carrito.html" style="margin-left: 20px">
+              <img src="fotos/carrito.png" alt="carrito" />
+            </a>
+          </div>
+        </div>
+      </nav>
+    </div>
+    <br />
+    <br />
+    <br />
+    <div class="container">
+      <div class="mb-3 row">
+        <div
+          class="col-sm-12 col-md-12 col-lg-12 col-xl-3 col-xxl-3 d-flex align-items-center justify-content-center"
+        >
+          <img
+            class="rounded-circle"
+            alt="avatar1"
+            src="https://mdbcdn.b-cdn.net/img/new/avatars/9.webp"
+          />
+        </div>
+        <div class="col-sm-12 col-md-12 col-lg-12 col-xl-9 col-xxl-9">
+          <div class="card">
+            <div class="card-header">
+              <h3 class="text-center"><b>Informaci&oacute;n del usuario</b></h3>
+            </div>
+            <div class="card-body">
+              <div class="mb-3 row">
+                <label
+                  for="staticEmail"
+                  class="col-sm-2 col-md-2 col-lg-2 col-xl-2 col-xxl-2 col-form-label"
+                  >Nombres</label
+                >
+                <div class="col-sm-10 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
+                  <input
+                    type="text"
+                    id="inputPassword6"
+                    class="form-control"
+                    aria-describedby="passwordHelpInline"
+                  />
+                </div>
+                <label
+                  for="staticEmail"
+                  class="col-sm-2 col-md-2 col-lg-2 col-xl-2 col-xxl-2 col-form-label"
+                  >Apellidos</label
+                >
+                <div class="col-sm-10 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
+                  <input
+                    type="text"
+                    id="inputPassword6"
+                    class="form-control"
+                    aria-describedby="passwordHelpInline"
+                  />
+                </div>
+              </div>
+              <br />
+              <hr />
+              <br />
+              <div class="row mb-3">
+                <form action="#" method="" id="">
+                  <div class="my-2">
+                    <label for="email1" class="form-label">Email</label>
+                    <input
+                      type="email"
+                      class="form-control"
+                      id="email1"
+                      aria-describedby="emailHelp"
+                    />
+                  </div>
+                  <div class="my-2">
+                    <label for="password1" class="form-label"
+                      >Contrase&ntilde;a</label
+                    >
+                    <input
+                      type="password"
+                      class="form-control"
+                      id="password1"
+                    />
+                  </div>
+                  <div class="text-end">
+                    <button type="button" class="btn btn-primary">
+                      Cerrar sesion
+                    </button>
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
-    </nav>
-  </div>
-    <br>
-    <br>
-    <br>
-    <div class="container">
-        <div class="mb-3 row">
-            <div class="col-sm-12 col-md-12 col-lg-12 col-xl-3 col-xxl-3 d-flex align-items-center justify-content-center">
-                <img class="rounded-circle" alt="avatar1" src="https://mdbcdn.b-cdn.net/img/new/avatars/9.webp" />
+      <div class="row">
+        <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
+          <div class="card">
+            <div class="card-header">
+              <h3 class="text-center">
+                <b>Informaci&oacute;n de despachos</b>
+              </h3>
             </div>
-            <div class="col-sm-12 col-md-12 col-lg-12 col-xl-9 col-xxl-9">
-                <div class="card">
-                    <div class="card-header">
-                        <h3 class="text-center"><b>Informaci&oacute;n del usuario</b></h3>
-                    </div>
-                    <div class="card-body">
-                        <div class="mb-3 row">
-                            <label for="staticEmail" class="col-sm-2 col-md-2 col-lg-2 col-xl-2 col-xxl-2 col-form-label">Nombres</label>
-                            <div class="col-sm-10 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
-                                <input type="text" id="inputPassword6" class="form-control" aria-describedby="passwordHelpInline">
-                            </div>
-                            <label for="staticEmail" class="col-sm-2 col-md-2 col-lg-2 col-xl-2 col-xxl-2 col-form-label">Apellidos</label>
-                            <div class="col-sm-10 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
-                                <input type="text" id="inputPassword6" class="form-control" aria-describedby="passwordHelpInline">
-                            </div>
-                        </div>
-                        <br><hr><br>
-                        <div class="row mb-3">
-                            <form action="#" method="" id="">
-                                <div class="my-2">
-                                    <label for="email1" class="form-label">Email</label>
-                                    <input type="email" class="form-control" id="email1" aria-describedby="emailHelp">
-                                </div>
-                                <div class="my-2">
-                                    <label for="password1" class="form-label">Contrase&ntilde;a</label>
-                                    <input type="password" class="form-control" id="password1">
-                                </div>
-                                <div class="text-end">
-                                    <button type="button" class="btn btn-primary">Cerrar sesion</button>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                </div>
+            <div class="card-body">
+              <table class="table table-striped table-hover">
+                <thead>
+                  <tr>
+                    <th class="text-center">C&oacute;digo de Despacho</th>
+                    <th class="text-center">Producto</th>
+                    <th class="text-center">Precio</th>
+                    <th class="text-center">Fecha de Compra</th>
+                    <th class="text-center">Estado</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td class="text-center">1</td>
+                    <td class="text-center">Monitos ASUS</td>
+                    <td class="text-center">$250.000</td>
+                    <td class="text-center">01-04-2024 14:23</td>
+                    <td class="text-center">
+                      <a href="#">En preparaci&oacute;n</a>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td class="text-center">2</td>
+                    <td class="text-center">Memoria RAM 8Gb</td>
+                    <td class="text-center">$30.000</td>
+                    <td class="text-center">01-04-2024 14:23</td>
+                    <td class="text-center"><a href="#">En camino</a></td>
+                  </tr>
+                  <tr>
+                    <td class="text-center">3</td>
+                    <td class="text-center">Placa Madre ASUS</td>
+                    <td class="text-center">$100.000</td>
+                    <td class="text-center">01-04-2024 14:23</td>
+                    <td class="text-center"><a href="#">Enviado</a></td>
+                  </tr>
+                </tbody>
+              </table>
             </div>
+          </div>
         </div>
-        <div class="row">
-            <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
-                    <div class="card">
-                    <div class="card-header">
-                        <h3 class="text-center"><b>Informaci&oacute;n de despachos</b></h3>
-                    </div>
-                    <div class="card-body">
-                        <table class="table table-striped table-hover">
-                            <thead>
-                                <tr>
-                                    <th class="text-center">C&oacute;digo de Despacho</th>
-                                    <th class="text-center">Producto</th>
-                                    <th class="text-center">Precio</th>
-                                    <th class="text-center">Fecha de Compra</th>
-                                    <th class="text-center">Estado</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td class="text-center">1</td>
-                                    <td class="text-center">Monitos ASUS</td>
-                                    <td class="text-center">$250.000</td>
-                                    <td class="text-center">01-04-2024 14:23</td>
-                                    <td class="text-center"><a href="#">En preparaci&oacute;n</a></td>
-                                </tr>
-                                <tr>
-                                    <td class="text-center">2</td>
-                                    <td class="text-center">Memoria RAM 8Gb</td>
-                                    <td class="text-center">$30.000</td>
-                                    <td class="text-center">01-04-2024 14:23</td>
-                                    <td class="text-center"><a href="#">En camino</a></td>
-                                </tr>
-                                <tr>
-                                    <td class="text-center">3</td>
-                                    <td class="text-center">Placa Madre ASUS</td>
-                                    <td class="text-center">$100.000</td>
-                                    <td class="text-center">01-04-2024 14:23</td>
-                                    <td class="text-center"><a href="#">Enviado</a></td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
-            </div>
-        </div>
+      </div>
     </div>
-</body>
+  </body>
 </html>
