se le quito la a animacion a la card

--- a/vista_producto.html
+++ b/vista_producto.html
@@ -99,7 +99,7 @@
                 <a
                   class="nav-link active"
                   aria-current="page"
-                  href="fotos/productos.html"
+                  href="productos.html"
                   >Productos</a
                 >
               </li>
@@ -127,7 +127,7 @@
     </div>
     <div class="DivPadre">
       <div class="container-vista-producto">
-        <div id="cards_mas_pequennias">
+        <div id="cards_mas_pequennias" style="transform: none;">
           <div class="card">
             <div class="card-body">
               <div
