--- a/perfil_usuario.html
+++ b/perfil_usuario.html
@@ -87,7 +87,7 @@
                         <div class="mb-3 row">
                             <label for="staticEmail" class="col-sm-2 col-md-2 col-lg-2 col-xl-2 col-xxl-2 col-form-label">Nombres</label>
                             <div class="col-sm-10 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
-                                <input type="text" id="inputPassword6" class="form-control" aria-describedby="passwordHelpInline">
+                                <input type="text" id="inputPassword6" class="form-control" aria-describedby="passwordHelpInline" required>
                             </div>
                             <label for="staticEmail" class="col-sm-2 col-md-2 col-lg-2 col-xl-2 col-xxl-2 col-form-label">Apellidos</label>
                             <div class="col-sm-10 col-md-4 col-lg-4 col-xl-4 col-xxl-4">
@@ -120,15 +120,15 @@
             <div class="modal-dialog">
               <div class="modal-content">
                 <div class="modal-header">
-                  <h1 class="modal-title fs-5" id="exampleModalLabel">Quiere guardar la informacion?</h1>
+                  <h1 class="modal-title fs-5" id="exampleModalLabel">¿Quieres guardar la información?</h1>
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
                   Los cambios podran ser modificados en caso de ser necesario
                 </div>
                 <div class="modal-footer">
-                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                  <button type="button" class="btn btn-primary">Save changes</button>
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                  <button class="btn btn-primary" type="submit">Guardar cambios</button>
                 </div>
               </div>
             </div>
