--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html"
             ><img src="fotos/logo.webp" style="width: 60px; height:
-            50px;"">DUOTECK</a
+            50px;">DUOTECK</a
           >
           <button
             class="navbar-toggler"
@@ -109,11 +109,11 @@
               <input
                 class="form-control me-2"
                 type="search"
-                placeholder="Search"
+                placeholder="Buscar producto..."
                 aria-label="Search"
               />
               <button class="btn btn-outline-success" type="submit">
-                Search
+                Buscar
               </button>
             </form>
             <a href="perfil_usuario.html" style="margin-left: 20px">
@@ -189,7 +189,7 @@
         class="cuadrado-vista-producto h-100 w-100 mt-3"
         style="text-align: center"
       >
-        <h1>PARA TI:</h1>
+        <h1>PRODUCTOS DESTACADOS:</h1>
       </div>
       <div id="productosIndex" class="container-fluid" style="width: 90%">
         <div
