--- a/vista_producto.html
+++ b/vista_producto.html
@@ -15,15 +15,14 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="Navbar">
-      <nav
+    <nav
         class="navbar navbar-expand-lg bg-body-tertiary"
         data-bs-theme="dark"
       >
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html"
-            ><img src="fotos/logo.webp" style="width: 60px; height: 50px;"
-            "="">DUOTECK</a
+            ><img src="fotos/logo.webp" style="width: 60px; height:
+            50px;">DUOTECK</a
           >
           <button
             class="navbar-toggler"
@@ -104,15 +103,15 @@
                 >
               </li>
             </ul>
-            <form class="d-flex" role="search" style="margin-right: 40%">
+            <form class="d-flex" role="search" style="margin-right: 30%">
               <input
                 class="form-control me-2"
                 type="search"
-                placeholder="Search"
+                placeholder="Buscar producto..."
                 aria-label="Search"
               />
               <button class="btn btn-outline-success" type="submit">
-                Search
+                Buscar
               </button>
             </form>
             <a href="perfil_usuario.html" style="margin-left: 20px">
@@ -124,7 +123,6 @@
           </div>
         </div>
       </nav>
-    </div>
     <div class="DivPadre">
       <div class="container-vista-producto">
         <div id="cards_mas_pequennias" style="transform: none;">
