Se cambia la img del usuario por una generada por la api

--- a/perfil_usuario.html
+++ b/perfil_usuario.html
@@ -125,7 +125,8 @@
     <div class="container">
         <div class="mb-3 row">
             <div class="col-sm-12 col-md-12 col-lg-12 col-xl-3 col-xxl-3 d-flex align-items-center justify-content-center">
-                <img class="rounded-circle" alt="avatar1" src="https://mdbcdn.b-cdn.net/img/new/avatars/9.webp" />
+              <div class="rounded-circle" id="gallery"></div>
+              <script src="api_img.js"></script>
             </div>
             <div class="col-sm-12 col-md-12 col-lg-12 col-xl-9 col-xxl-9">
                 <div class="card">
